# Stella_RayTracing

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  color.h  hittable.h  hittable_list.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/: main.cpp
